--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,3 +68,47 @@ i.fa.fa-bars::before {
   color: white;
   border: none;
 }
+
+.resources-container {
+  display: flex;
+  justify-content: center;
+
+}
+
+table, tbody{
+  margin-top: 10px;
+  width: 80%;
+  height: 100%;
+  border-collapse: collapse;
+}
+
+.resources-container img {
+  width: 50px;
+  height: 50px;
+}
+
+tr:hover {
+  background-color: #f5f5f5
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  cursor: pointer;
+  text-align: center;
+}
+
+th {
+  background-color :#404040;
+  color: white;
+}
+th:hover {
+  background-color: #202020;
+}
+th:first-child {
+  border-top-left-radius: 10px;
+}
+th:last-child {
+  border-top-right-radius: 10px;
+}
