--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,7 +69,7 @@ i.fa.fa-bars::before {
   border: none;
 }
 
-.resources-container {
+.resources-container, .job-list-container {
   display: flex;
   justify-content: center;
 
@@ -85,8 +85,8 @@ table, tbody{
 .resources-container img {
   width: 50px;
   height: 50px;
+  text-align: center;
 }
-
 tr:hover {
   background-color: #f5f5f5
 }
@@ -109,6 +109,6 @@ th:hover {
 th:first-child {
   border-top-left-radius: 10px;
 }
-th:last-child {
+ th:last-child {
   border-top-right-radius: 10px;
 }
