--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,7 +81,7 @@ i.fa.fa-bars::before {
   border: none;
 }
 
-.resources-container, .job-list-container {
+.resources-container, .resource-table, .job-list-container {
   display: flex;
   justify-content: center;
 
@@ -123,4 +123,37 @@ th:first-child {
 }
  th:last-child {
   border-top-right-radius: 10px;
+}
+.resource-table {
+  width: 100%;
+  height: 100%;
+}
+.resource-modal {
+  display: flex;
+  width: 100%;
+  padding: 50px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.resource-modal button{
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+.resource-modal img {
+  display: block;
+  min-height: 250px;
+  min-width: auto;
+}
+.resource-form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin: 20px 50px;
+  padding: 10px;
+  border-left: thick solid #808080;
+}
+p.description {
+  margin-top: 10px;
+  max-width: 1000px;
 }
