--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,18 +46,24 @@ button {
   float: left;
   padding-bottom: 5px;
 }
+
 .search-container input {
   width: 0px;
   opacity: 0;
   margin: 17px 10px;
   padding: 3px;
   transition: all .5s ease;
-  position:absolute;
+  position: absolute;
 }
+
 .search-container input.expanded {
-  width: 200px;
+  width: 300px;
   opacity: 1;
+  background: transparent;
+  border: none;
+  color: white;
 }
+
 a.menu-icon {
   float: right;
 }
@@ -65,12 +71,14 @@ a.menu-icon {
 i.fa.fa-bars::before {
   float: right;
 }
+
 .null {
   display: inline-block;
   float: right;
   padding: 0;
   margin: 0;
 }
+
 .content {
   margin-top: 20px;
 }
@@ -99,6 +107,16 @@ table, tbody{
   height: 50px;
   text-align: center;
 }
+
+.sortbutton {
+  padding: 8px;
+  border-radius: 10px;
+  border: none;
+  background: #333;
+  color: white;
+  margin-bottom: 12px;
+}
+
 tr:hover {
   background-color: #f5f5f5
 }
@@ -115,19 +133,24 @@ th {
   background-color :#404040;
   color: white;
 }
+
 th:hover {
   background-color: #202020;
 }
+
 th:first-child {
   border-top-left-radius: 10px;
 }
+
  th:last-child {
   border-top-right-radius: 10px;
 }
+
 .resource-table {
   width: 100%;
   height: 100%;
 }
+
 .resource-modal {
   display: flex;
   width: 100%;
@@ -135,16 +158,19 @@ th:first-child {
   justify-content: center;
   flex-wrap: wrap;
 }
+
 .resource-modal button{
   position: absolute;
   right: 20px;
   top: 20px;
 }
+
 .resource-modal img {
   display: block;
   min-height: 250px;
   min-width: auto;
 }
+
 .resource-form {
   display: flex;
   flex-wrap: wrap;
@@ -153,6 +179,7 @@ th:first-child {
   padding: 10px;
   border-left: thick solid #808080;
 }
+
 p.description {
   margin-top: 10px;
   max-width: 1000px;
