moved search function to App.js

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,6 +62,7 @@ button {
   opacity: 1;
   border: none;
   color: white;
+  border-radius: 5px;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
