--- a/client/src/index.css
+++ b/client/src/index.css
@@ -49,6 +49,10 @@ button {
   text-align: left;
   width: 100%;
 }
+.clear-search, .search-container input {
+  position: relative;
+  top: -5px;
+}
 .search-container input {
   width: 0px;
   opacity: 0;
@@ -65,6 +69,11 @@ button {
   padding: 3px;
   color: white;
   border-radius: 5px;
+}
+
+.clear-search {
+  border-radius: 50%;
+  z-index: 10;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
