--- a/client/public/app.css
+++ b/client/public/app.css
@@ -53,7 +53,13 @@ button {
   cursor: pointer;
 }
 button.close {
-  color: white;
+  color: #A9A9A9;
+  position: absolute;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  top: 10px;
+  right: 10px;
+  width: 20px;
+  height: 20px;
 }
 
 .navbar .title {
@@ -269,4 +275,35 @@ h3 {
   padding: 0;
   margin: -30px 0 10px 0px;
   text-align: center;
+}
+
+.add-resource-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  height: 550px;
+}
+.add-resource-container textarea {
+  min-height: 35px;
+  padding: 5px;
+}
+textarea.additional-details {
+  min-height: 70px;
+}
+.save-button-container {
+  display: flex;
+  justify-content: center;
+}
+button.save-resource {
+  max-height: 35px;
+  max-width: 150px;
+  min-height: 35px;
+  min-width: 150px;
+  padding: 5px;
+  margin: 15px;
+  border-radius: 5px;
+}
+button.save-resource:active {
+  transform: translateY(2px);
 }
