--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Crete+Round|Exo+2|Josefin+Sans|Mogra|Playfair+Display|Roboto');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-}
+  font-family: 'Roboto', sans-serif;
 
+}
+h1,h2,h3,h4 {
+font-family: 'Mogra', cursive;
+}
 .App {
   text-align: center;
 }
