--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,31 +4,37 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  background: #dfdbe0;
+}
 
-}
 h1,h2,h3,h4 {
-font-family: 'Mogra', cursive;
+  font-family: 'Mogra', cursive;
 }
+
 .App {
   text-align: center;
 }
+
 a {
   cursor: pointer;
 }
+
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #2e075a;
   width: 100%;
   display: block;
   border: none;
   -webkit-box-shadow: 7px 6px 5px 0px rgba(31,25,24,0.32);
   -moz-box-shadow: 7px 6px 5px 0px rgba(31,25,24,0.32);
   box-shadow: 7px 6px 5px 0px rgba(31,25,24,0.32);
+  padding-bottom: 7px;
 }
 
 button {
   cursor: pointer;
 }
+
 button.close {
   color: #A9A9A9;
   position: absolute;
@@ -37,25 +43,36 @@ button.close {
   right: 10px;
   width: 20px;
   height: 20px;
+  font-size: 8px;
+}
+
+button.clear-search.pointer-events {
+  background: #ffe78f;
+  border: none;
+  color: #2e075a;
+  font-size: 10px;
+  text-align: center;
+  padding: 7px;
+  font-weight: 800;
 }
 
 .navbar .title {
   display: inline-block;
   text-align: center;
-  font-size: 1.7em;
-  color: white;
+  font-size: 1.85em;
+  color: #fff;
 }
 
 .navbar a {
   display: inline-block;
   padding-top: 16px;
   transition: all 0.3s ease;
-  color: white;
+  color: #ffe78f;
   font-size: 24px;
 }
 
 .navbar a:hover {
-  background-color: #000;
+  color: #845af4;
 }
 
 .search-container {
@@ -64,10 +81,12 @@ button.close {
   pointer-events: none;
   width: 100%;
 }
+
 .clear-search, .search-container input {
   position: relative;
   top: -5px;
 }
+
 .search-container input {
   width: 0px;
   opacity: 0;
@@ -75,6 +94,7 @@ button.close {
   padding: 3px;
   transition: all .5s ease;
 }
+
 .pointer-events {
   pointer-events:auto;
 }
@@ -114,6 +134,7 @@ a.menu-icon {
 .auth-buttons {
   display: flex;
   justify-content: center;
+  font-size: 14px;
 }
 
 i.fa.fa-bars::before {
@@ -156,16 +177,22 @@ table, tbody{
 }
 
 .sortbutton {
-  padding: 8px;
+  padding: 9px;
+  text-align: center;
   border-radius: 10px;
   border: none;
-  background: #333;
-  color: white;
+  background: #845af4;
+  color: #f5f5f5;
   margin-bottom: 12px;
+  margin-right: 19px;
+  font-size: 11px;
+}
+.sortbutton:hover {
+  background: #2e075a;
 }
 
 tr:hover {
-  background-color: #f5f5f5
+  background-color: #08d2e7;
 }
 
 th, td {
@@ -176,20 +203,19 @@ th, td {
 }
 
 th {
-  background-color :#404040;
+  background-color: #2e075a;
   color: white;
 }
 
 th:hover {
-  background-color: #202020;
+  background-color: #845af4;
 }
 
 th:first-child {
   border-top-left-radius: 10px;
-  
 }
 
- th:last-child {
+th:last-child {
   border-top-right-radius: 10px;
 }
 
@@ -236,18 +262,22 @@ p.description {
   margin-top: 10px;
   max-width: 1000px;
 }
+
 .job-list-container th:nth-child(-n+3){
   cursor: pointer;
 }
+
 .job-resource-container {
   height: 80%;
   width: 80%;
 }
+
 button.close-resource-modal {
   position: absolute;
   right: 20px;
   top: 20px;
 }
+
 h3 {
   padding: 0;
   margin: -30px 0 10px 0px;
