--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Crete+Round|Exo+2|Josefin+Sans|Mogra|Playfair+Display|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Exo+2|Roboto');
 
 body {
   margin: 0;
@@ -8,7 +8,7 @@ body {
 }
 
 h1,h2,h3,h4 {
-  font-family: 'Mogra', cursive;
+  font-family: 'Exo 2', sans-serif;
 }
 
 .App {
