--- a/client/public/app.css
+++ b/client/public/app.css
@@ -1,32 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Exo+2|Roboto);.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-.App a {
-  color: #f60;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-body {
+@import url(https://fonts.googleapis.com/css?family=Exo+2|Roboto);body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
