--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,10 @@ h1,h2,h3,h4 {
   text-align: center;
 }
 
+.App-intro {
+  margin-right: 19px;
+}
+
 a {
   cursor: pointer;
 }
@@ -28,7 +32,7 @@ a {
   -webkit-box-shadow: 7px 6px 5px 0px rgba(31,25,24,0.32);
   -moz-box-shadow: 7px 6px 5px 0px rgba(31,25,24,0.32);
   box-shadow: 7px 6px 5px 0px rgba(31,25,24,0.32);
-  padding-bottom: 7px;
+  padding-bottom: 10px;
 }
 
 button {
