--- a/client/src/index.css
+++ b/client/src/index.css
@@ -307,7 +307,7 @@ h3 {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 20px;
+  padding: 0px 20px 20px 20px;
   height: 550px;
 }
 .add-resource-container textarea {
@@ -359,4 +359,11 @@ button.save-job {
 }
 button.save-job:active {
   transform: translateY(2px);
+}
+.error {
+color: #D8000C;
+background-color: #FFBABA;
+margin: 10px;
+padding: 5px;
+border-radius: 10px;
 }
