--- a/client/src/index.css
+++ b/client/src/index.css
@@ -180,6 +180,10 @@ table, tbody{
   text-align: center;
 }
 
+i.fa-trash-o:hover {
+  cursor: pointer;
+}
+
 .sortbutton {
   padding: 9px;
   text-align: center;
@@ -206,7 +210,7 @@ table, tbody{
   font-size: 12px;
 }
 
-tr:hover {
+tr:not(:first-child):hover {
   background-color: #08d2e7;
 }
 
@@ -222,7 +226,7 @@ th {
   color: white;
 }
 
-th:hover {
+th:hover:not(:last-child) {
   background-color: #845af4;
 }
 
@@ -309,7 +313,7 @@ h3 {
   justify-content: center;
   flex-direction: column;
   padding: 0px 20px 20px 20px;
-  height: 550px;
+  height: 100%;
 }
 .add-resource-container textarea {
   min-height: 35px;
